Fixed layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,7 +105,6 @@ body {
 }
 
 .container {
-  margin: 15px;
-  margin-top: 100px;
-  height: 200px;
+  margin-top: 10px;
+  background-color: purple;
 }
